5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1577_994.log
== TEST (2019-03-14 19:03:11) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:09) 
-- CODE:
in (1) print["Universidade Federal do Amazonas"]
-- ERROR:
File "XXXX", line 1
    in (1) print["Universidade Federal do Amazonas"]
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:14:16) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:14:25) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.208466
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
